--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": true,
-  "singleQuote": false
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": false,
+
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
