--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@tanstack/react-query": "^5.56.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.3.0",
         "jotai": "^2.10.0",
         "js-cookie": "^3.0.5",
         "lucide-react": "^0.446.0",
